--- a/report/report.tex
+++ b/report/report.tex
@@ -1,13 +1,15 @@
 % $File: report.tex
-% $Date: Fri Jun 21 18:27:26 2013 +0800
+% $Date: Sat Jun 22 18:05:04 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
+\usepackage{threeparttable}
+\usepackage{dirtree}
+\usepackage{keystroke}
+
 
 \usepackage{fontspec,amsmath,amssymb,zhspacing,verbatim,minted,listings,zhmath}
 \usepackage{titlesec, titletoc}
-\usepackage{threeparttable}
-\usepackage{dirtree}
 \usepackage{enumerate}
 \usepackage[hyperfootnotes=false,colorlinks,linkcolor=blue,anchorcolor=blue,citecolor=blue]{hyperref}
 \usepackage[sorting=none]{biblatex}
