--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,7 +1,10 @@
 % File: diary.tex
-% Date: Fri Jun 21 18:59:22 2013 +0800
+% Date: Sat Jun 22 19:47:49 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
+本项目的开发记录可以通过git查看. 项目托管在github\footnote{\url{https://github.com/ppwwyyxx/Ray-Tracing-Engine}}
+及计算机系git9\footnote{\url{http://git.net9.org/ppwwyyxx/ray}}上,并于6月24日开源.
+
 \begin{enumerate}
   \item
     首次出现正常的图片. 用了一个$ x-y$平面上的无限大平面及一个点光源。
