update gui for new consts

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,5 +1,5 @@
 % File: intro.tex
-% Date: Sat Jun 22 19:55:29 2013 +0800
+% Date: Sat Jun 22 23:04:03 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 
 \section{简介}
@@ -37,12 +37,12 @@
 \begin{table}[H]
   \begin{tabular}{c|c}
     \shline
-    \UArrow \DArrow& 屏幕以视点到其连线为轴旋转\\
+    \UArrow \DArrow& 屏幕以视点到其连线为轴旋转, \UArrow 顺时针\\
     \LArrow \RArrow & 围绕固定中心旋转视点\\
     \keystroke{h}\keystroke{j}\keystroke{k}\keystroke{l} & 视点及屏幕的平移 \\
     \keystroke{=}\keystroke{-} & 缩放\\
     \keystroke{>}\keystroke{<} & 固定视点旋转视角\\
-    \keystroke{]}\keystroke{[} & 调节焦平面远近(景深模式下有用)\\
+    \keystroke{]}\keystroke{[} & 调节焦平面远近(景深模式下有用), \keystroke{]}调远\\
     \keystroke{s} & 保存当前图片至output.png\\
     \keystroke{p} & 输出当前视角信息\\
     \keystroke{q} \Esc & 退出\\
