update report, globalillu can work

--- a/report/algo.tex
+++ b/report/algo.tex
@@ -1,5 +1,5 @@
 % File: algo.tex
-% Date: Sat Jun 22 20:03:24 2013 +0800
+% Date: Sun Jun 23 01:54:26 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{算法说明}
 \subsection{光线追踪及光照模型}
@@ -105,7 +105,7 @@ KD树是一种空间划分树,原本用于在K维空间中快速查找点,可利
 
 \subsection{纹理}
 一种纹理相当于一个二维坐标到表面属性的映射.
-表面属性除Phong模型参数外,还包括了透明度,用于折射判定.
+表面属性除Phong模型参数外,还包括了透明度,用于折射判定,以及发光强度,用于全局光照模型.
 程序实现了均匀纹理、网格纹理、图片纹理三类纹理,并可通过继承\verb|Texture|类进行扩展.
 
 对于一个物体,由其自己管理三维坐标到二维坐标的映射.
