--- a/report/refs.bib
+++ b/report/refs.bib
@@ -19,6 +19,11 @@
 	url ={http://en.wikipedia.org/wiki/Phong_reflection_model}
 }
 
+@ONLINE{pathtracing,
+	title ={Wikipedia page for Path Tracing},
+	url ={http://en.wikipedia.org/wiki/Path_tracing}
+}
+
 @inproceedings{aabb,
 	title={An efficient and robust ray-box intersection algorithm},
 	author={Williams, Amy and Barrus, Steve and Morley, R Keith and Shirley, Peter},
