--- a/report/refs.bib
+++ b/report/refs.bib
@@ -2,6 +2,10 @@
 	title ={Wikipedia page for Beer-Lambert Law},
 	url ={http://en.wikipedia.org/wiki/Beer-Lambert_law}
 }
+@ONLINE{fresnel,
+	title ={Wikipedia page for Fresnel Equations},
+	url ={https://en.wikipedia.org/wiki/Fresnel_equations}
+}
 @ONLINE{triangle,
 	title ={Ray-triangle intersection},
 	author={Brian Curless},
@@ -51,4 +55,9 @@
   number={11},
   pages={44--49},
   year={1998}
+}
+
+@article{montecarlo,
+  title={Monte Carlo path tracing},
+  author={Koivisto, Jukka}
 }
