--- a/report/design.tex
+++ b/report/design.tex
@@ -1,5 +1,5 @@
 % File: design.tex
-% Date: Sun Jun 23 01:53:37 2013 +0800
+% Date: Sun Jun 23 22:37:31 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 
 \section{项目设计}
@@ -7,9 +7,11 @@
 项目的目录结构大致如下:
 \dirtree{%
   .1 /.
+  .2 report.pdf.
   .2 report/\DTcomment{本报告的\LaTeX 源代码}.
   .3 img/\DTcomment{报告中使用到的样例图片}.
-  .2 demo/\DTcomment{一些演示}.
+  .2 demo/\DTcomment{一些样例}.
+  .2 doc/\DTcomment{由Doxygen生成的程序文档}.
   .2 resource/\DTcomment{程序使用到的外部资源}.
   .2 src/\DTcomment{程序源代码}.
   .3 include/\DTcomment{头文件}.
