--- a/report/diary.tex
+++ b/report/diary.tex
@@ -1,5 +1,5 @@
 % File: diary.tex
-% Date: Sun Jun 23 21:53:14 2013 +0800
+% Date: Sun Jun 23 23:57:02 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 \section{过程记录}
 本项目的详细开发记录可以通过git查看. 项目托管在github\footnote{\url{https://github.com/ppwwyyxx/Ray-Tracing-Engine}}
@@ -245,5 +245,15 @@
       \caption{Path Tracing透射效果图\label{fig:pt_transm}}
     \end{figure}
 
-
 \end{enumerate}
+
+\section*{两张效果图}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{img/all_phong.png}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{img/all_path_tracing.png}
+\end{figure}
