--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 % $File: report.tex
-% $Date: Sun Jun 30 17:44:50 2013 +0800
+% $Date: Sun Sep 01 10:58:43 2013 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
@@ -12,7 +12,7 @@
 \usepackage{titlesec, titletoc}
 \usepackage{enumerate}
 \usepackage[hyperfootnotes=false,colorlinks,linkcolor=blue,anchorcolor=blue,citecolor=blue]{hyperref}
-\usepackage[sorting=none]{biblatex}
+\usepackage[backend=biber]{biblatex}
 %\usepackage[dvips]{graphicx}
 \usepackage{subfigure}
 \usepackage{indentfirst}
