--- a/report/design.tex
+++ b/report/design.tex
@@ -1,5 +1,5 @@
 % File: design.tex
-% Date: Sun Jun 23 23:56:09 2013 +0800
+% Date: Sun Sep 01 10:47:09 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 
 \section{项目设计}
@@ -70,21 +70,32 @@
 \verb|Renderable|类只有获取物体表面纹理及获取包围盒两种方法,
 \verb|Trace|类包括了判断相交、求交点、求交点法向、交点表面属性、交点前方介质密度等方法.
 
-这样做的好处是,由\verb|Trace|对象自己管理求交过程的中间结果,保留有用的结果以备其他方法使用,节省了计算资源.
-如判断是否相交时一些中间结果可能在计算交点距离时使用,交点法向方向有可能被计算纹理映射坐标时使用,
-这些中间结果是每一对$ (物体,光线)$特有的,又不该对外界暴露,因而用\verb|Trace|类将其封装.
+这样设计的好处有如下两点:
 
-同时,这种设计使得同样的\verb|KDTree|类只需接受一个\verb|Renderable|对象的集合,
-就可以很好的管理物体,实现了KD树的数据结构在网格以及在整个空间中的复用,也能够支持KD树的嵌套.
+\begin{enumerate}
+    \item
+      由\verb|Trace|对象自己管理求交过程的中间结果,
+      保留有用的结果以备其他方法使用,节省了计算资源.
+如判断是否相交时, 一些中间结果可能在计算交点距离时使用, 交点法向方向又有可能被计算纹理映射坐标时使用,
+这些中间结果是每一对$ (物体,光线)$特有的,且不该对外界暴露,因而用\verb|Trace|类将其封装.
+
+\item 这种设计使得同样的\verb|KDTree|类只需接受一个\verb|Renderable|对象的集合,
+就可以很好的管理物体,实现了KD树的数据结构在网格以及在整个空间中的复用.
+并且, \verb|KDTree|也是\verb|Renderable|子类, 因而能够支持KD树的嵌套.
+程序中, 所有面片较多的网格对象内部用KD树管理面片,  同时空间中所有有限大物体也被KD树管理.
+
+\end{enumerate}
 
 \subsection{空间视图相关设计}
 \begin{figure}[H]
   \centering
   \includegraphics[scale=0.4]{res/viewer_diagram.png}
 \end{figure}
-空间\verb|Space|类为一系列物体及光源的封装.
+空间\verb|Space|类用于描述场景, 为一系列物体及光源的封装.
 
-视图\verb|View|类为一个视点及屏幕的组合,负责生成光线并调用\verb|Space::trace()|获取相应颜色.
+视图\verb|View|类为视点及屏幕的组合,负责生成光线对象,
+并传入\verb|Space::trace()|获取相应颜色, 最终生成图像矩阵.
 
 \verb|Viewer|类提供用户操作的接口,
-根据用户操作调用\verb|View|类的一系列改变视角的方法\secref{navigate},同时调用\verb|RenderBase|类进行显示.
+根据用户操作调用\verb|View|类的一系列改变视角的方法\secref{navigate},
+\verb|View|返回图像后,调用\verb|RenderBase|类进行显示.
