--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,14 +1,14 @@
 % File: intro.tex
-% Date: Sun Jun 23 01:49:23 2013 +0800
+% Date: Sun Sep 01 09:45:52 2013 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 
 \section{简介}
-本程序是一个3D渲染程序.
-选用Phong模型\cite{phong}作为局部光照模型或path tracing\cite{pathtracing}作为全局光照模型,渲染3D场景.
+本程序是一个基于光线追踪的3D渲染程序.
+可以选用Phong模型\cite{phong}作为局部光照模型或Path Tracing\cite{pathtracing}作为全局光照模型,渲染3D场景.
 支持平面、球、三角面片、三角网格(可从obj文件读入)几种几何对象,并可方便的扩展.
-渲染支持软阴影,抗锯齿,景深,自定义纹理等功能, 并可对三角网格进行简化.
-三角网格,全局渲染,网格简化均采用数据结构(KD树及堆)与多线程加速,效率很高.
-同时,将渲染功能嵌入了图形界面,可以支持obj文件的预览及简化.
+渲染效果上,支持软阴影,抗锯齿,景深,自定义纹理等功能, 并可对三角网格进行简化.
+三角网格,全局渲染,网格简化均采用特定数据结构(KD树及堆)与多线程加速,效率很高.
+同时,将渲染功能嵌入了图形界面,可以在图形界面上支持obj文件的预览及简化.
 
 \subsection{依赖}
 \begin{enumerate}
@@ -22,7 +22,6 @@
 
 \item Qt4  \footnote{\url{http://qt-project.org/}} (可选)
 \end{enumerate}
-
 
 \subsection{编译}
 在\verb|src|目录中,使用\verb|make|命令和\verb|make gui|命令分别编译命令行程序与图形界面程序.
