update readme & report

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,5 @@
 % $File: report.tex
-% $Date: Fri Jan 03 16:57:48 2014 +0800
+% $Date: Mon Jan 06 16:07:45 2014 +0800
 % $Author: wyx <ppwwyyxxc@gmail.com>
 
 \documentclass[11pt,a4paper]{article}
@@ -28,7 +28,7 @@ basicstyle=\footnotesize\ttfamily}
 \pagestyle{fancy}
 \setlength{\headheight}{15.2pt}
 \lhead[]{}\rhead[]{}
-\fancyhead[C]{\emph{图形学大作业报告}}
+\fancyhead[C]{\emph{光线追踪及网格简化}}
 
 
 %use cell in tabular
