--- a/report/title.tex
+++ b/report/title.tex
@@ -1,5 +1,5 @@
 % File: title.tex
-% Date: Thu Jun 20 18:49:41 2013 +0800
+% Date: Mon Jan 06 16:07:31 2014 +0800
 % Author: Yuxin Wu <ppwwyyxxc@gmail.com>
 
 \newcommand{\HUGE}{\fontsize{29pt}{29pt}\selectfont}
@@ -23,7 +23,7 @@
 \hspace{3cm}{ \HUGE \bfseries 光线追踪及网格简化}\\[0.4cm]
 
 
-\hspace{3cm} {\huge \bfseries 作业文档}
+\hspace{3cm} {\huge \bfseries 项目文档}
 
 \end{flushleft}
 
